cabal-version: 1.12

name:           restograph
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Github username here/restograph#readme>
homepage:       https://github.com/Github username here/restograph#readme
bug-reports:    https://github.com/Github username here/restograph/issues
author:         Author name here
maintainer:     Author email here
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Github username here/restograph

library
  exposed-modules:
      Lib
  other-modules:
      Paths_restograph
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , hasql
    , postgresql-libpq
    , servant
    , servant-server
    , text
    , wai
  default-language: Haskell2010

executable restograph-exe
  main-is: Main.hs
  other-modules:
      Paths_restograph
  hs-source-dirs:
      apps/exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , restograph
    , bytestring
    , postgresql-libpq
    , text
    , warp
  default-language: Haskell2010

executable restograph-initdb
  main-is: Main.hs
  other-modules:
      Paths_restograph
  hs-source-dirs:
      apps/initdb
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , restograph
    , hasql
  default-language: Haskell2010

test-suite restograph-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_restograph
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , restograph
    , hspec
    , servant-client
  default-language: Haskell2010
